--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -2,41 +2,44 @@ name: Scrape Listings
 
 on:
   schedule:
-    - cron: '*/30 * * * *'
-  workflow_dispatch:
+    - cron: "*/30 * * * *"   # every 30 minutes, UTC
+  workflow_dispatch:          # manual "Run workflow" button
+
+permissions:
+  contents: write             # <-- allows committing unified.json
 
 jobs:
   scrape:
     runs-on: ubuntu-latest
-    steps:
-      - name: Check out repo
-        uses: actions/checkout@v4
-        with:
-          persist-credentials: true
+    env:
+      PLAYWRIGHT_BROWSERS_PATH: .playwright-browsers
 
-      - name: Set up Node.js
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: "20"
 
-      - name: Install dependencies
-        run: |
-          npm ci || npm install
+      - name: Install deps
+        run: npm ci || npm i
 
-      - name: Install Playwright browsers
+      - name: Install Playwright browsers (repo-local cache)
         run: npx playwright install --with-deps
 
       - name: Run scraper
         run: npm run scrape
 
-      - name: Commit updated export
+      - name: Commit updated exports/unified.json if changed
         run: |
-          if [[ -n "$(git status --short exports/unified.json)" ]]; then
-            git config user.name "github-actions[bot]"
-            git config user.email "github-actions[bot]@users.noreply.github.com"
-            git add exports/unified.json
-            git commit -m "feeding the condo beast 🦊🍣"
-            git push
-          else
-            echo "No export changes to commit."
+          if git diff --quiet -- exports/unified.json; then
+            echo "No changes to commit"
+            exit 0
           fi
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add exports/unified.json
+          git commit -m "feeding the condo beast 🦊🍣"
+          git push
